--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,16 +8,15 @@
   font-weight: normal;
 }
 
-a,
-.green {
+a {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: #004589;
   transition: 0.4s;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsla(226, 100%, 37%, 0.2);
   }
 }
 
